# speed_node_cpp

./: CMakeLists.txt  package.xml
src/: detection_image.cpp
